# pfg_watcher_service

./: .gitignore  Dockerfile  app.py  docker-compose.yml  pyproject.toml  rabbitmq.conf
pfg_watcher_service/adapters/: postgres.py
pfg_watcher_service/config/: __init__.py
pfg_watcher_service/jobs/: mark_sesh_finished_job.py
pfg_watcher_service/listeners/: listeners.py
pfg_watcher_service/scheduler/: scheduler.py
