[tool.poetry]
name = "pfg-watcher-service"
version = "0.1.0"
description = ""
authors = ["Matt Garrett <mjgarrett7092@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
apscheduler = "^3.11.0"
pika = "^1.3.2"
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
